namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: site-ns
  labels:
    name: site-ns
    shared-gateway-access: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: infra-ns
  labels:
    name: infra-ns
    shared-gateway-access: "true"
