deployment-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: io-heavy-app
    app.kubernetes.io/component: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: io-heavy-app
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: io-heavy-app
        app.kubernetes.io/component: app
    spec:
      containers:
        - name: nodejs-hello-app
          image: hello-world:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "0.1"
              memory: "128Mi"
            limits:
              cpu: "0.5"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: io-heavy-app
    app.kubernetes.io/component: app
  annotations:
    service.beta.kubernetes.io/oci-load-balancer-shape: "flexible"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-min: "10"
    service.beta.kubernetes.io/oci-load-balancer-shape-flex-max: "100"
spec:
  type: LoadBalancer
  selector:
    app: io-heavy-app
  ports:
  - port: 3000
    protocol: TCP
