http-route-config.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home
  namespace: site-ns
spec:
  parentRefs:
  - name: shared-gateway
    namespace: infra-ns
  hostnames:
    - "my-mkt-place.com"
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: home
      port: 3000
